# pathfinder

./: Cargo.toml
demo/hololens/: Cargo.toml
demo/hololens/PathfinderDemo/: PathfinderDemo.sln
demo/hololens/PathfinderDemo/PathfinderDemo/: AppView.cpp  AppView.h  Package.appxmanifest  PathfinderDemo.vcxproj  PathfinderDemo.vcxproj.filters  PathfinderDemoMain.cpp  PathfinderDemoMain.h
demo/hololens/PathfinderDemo/PathfinderDemo/Content/: ShaderStructures.h  SpatialInputHandler.cpp  SpatialInputHandler.h  SpinningCubeRenderer.cpp  SpinningCubeRenderer.h
