[package]
name = "pathfinder_hololens_demo"
version = "0.1.0"
authors = ["Manish Goregaokar <manishsmail@gmail.com>"]
edition = "2018"
[lib]
crate_type = ["cdylib"]

[dependencies]
gl = "0.6"
lazy_static = "1.3"

[dependencies.pathfinder_demo]
path = "../common"

[dependencies.pathfinder_geometry]
path = "../../geometry"

[dependencies.pathfinder_gl]
path = "../../gl"

[dependencies.pathfinder_gpu]
path = "../../gpu"
